# dtos/weather.dto.ts
@@ -6,3 +6,15 @@ export interface WeatherResponseDto {
   humidity: number;
   description: string;
 }
+
+export interface ForecastDayDto {
+  date: string;
+  temperature: number;
+  feels_like: number;
+  humidity: number;
+  description: string;
+}
+
+export interface WeatherWithForecastDto extends WeatherResponseDto {
+  forecast: ForecastDayDto[];
+}
